# Master-Equation-with-Initial-Correlations

./: .gitignore  CITATION.bib  CITATION.cff  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api-reference.md
examples/: README.md  bosonic_bath_second_moment.py  bosonic_bath_spin_boson.py  exact_pure_dephasing.py  export_figure_assets.py  load_reference_curves.py  plot_paper_figure_02_pure_dephasing_N4.py  spin_bath.py  subohmic_bosonic_bath.py  superohmic_bosonic_bath.py
paper-plots/: README.md  figure_01_puredephasing_N1.py  figure_02_puredephasing_N4.py  figure_03_puredephasing_N10.py  figure_04_beyond_pd_N2.py  figure_05_beyond_pd_N4.py  figure_06_beyond_pd_N10.py  figure_07_beta_0p5_N10.py  figure_08_beta_1p5_N10.py  figure_09_jx2_N4.py  figure_10_jx2_N10.py  figure_11_subohmic_s0p5_J2.py  figure_12_subohmic_s0p5_J5.py  figure_13_spin_bath_J2.py  figure_14_spin_bath_J5.py
scripts/: run_smoke_examples.py
src/master_equation_initial_correlations/: __init__.py  _resources.py  _types.py  _validation.py  blackbox.py  catalog.py  cli.py  exact.py  fortran_runner.py  generated_inputs.py  observables.py  plotting.py  pure_dephasing.py  reference.py  result.py  simulation.py  solvers.py
src/master_equation_initial_correlations/_assets/: figure_manifest.json
src/master_equation_initial_correlations/_assets/figures/beta_compare_ohmic_beta0p5_j5/: metadata.json
src/master_equation_initial_correlations/_assets/figures/beta_compare_ohmic_beta1p5_j5/: metadata.json
src/master_equation_initial_correlations/_assets/figures/beyond_pure_dephasing_ohmic_j1/: metadata.json
src/master_equation_initial_correlations/_assets/figures/beyond_pure_dephasing_ohmic_j2/: metadata.json
tests/: test_catalog.py  test_citation_files.py  test_cli.py  test_exact_pure_dephasing.py  test_generated_inputs.py  test_observables.py  test_plotting.py  test_reference_curves.py  test_rerun_light_presets.py  test_run_workflows.py
(+76 files in other folders)
